[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.27.0",
    "hypercorn>=0.17.3",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
